// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dictionary > can index and search a dictionary 1`] = `
[
  {
    "etymologies": [
      {
        "description": "Latin root",
        "senses": {
          "n": {
            "definitions": [
              "(vertebrates) To move swiftly",
              "Act or instance of hurrying (to or from a place) (not necessarily by foot); dash or errand, trip.",
              "A pleasure trip.",
              "Flight, instance or period of fleeing.",
              "Migration (of fish).",
              "A group of fish that migrate, or ascend a river for the purpose of spawning.",
            ],
            "pos": "n",
          },
          "v": {
            "definitions": [
              {
                "definitions": [
                  "(vertebrates) To move swiftly (figuratively)",
                  "(fluids) To flow.",
                  "(nautical, of a vessel) To sail before the wind, in distinction from reaching or sailing close-hauled.",
                  "(social) To carry out an activity.",
                  "To extend or persist, statically or dynamically, through space or time.",
                  "(transitive) To execute or carry out a plan, procedure or program.",
                ],
                "description": "A number of verb senses",
              },
            ],
            "pos": "v",
          },
        },
      },
    ],
    "term": "run",
  },
]
`;

exports[`Dictionary > lookup > can split terms 1`] = `
[
  {
    "entry": {
      "etymologies": [
        {
          "description": "Latin root",
          "senses": {
            "n": {
              "definitions": [
                "a cat",
              ],
              "pos": "n",
            },
          },
        },
      ],
      "term": "cat",
    },
  },
  {
    "entry": {
      "etymologies": [
        {
          "description": "Latin root",
          "pronunciation": "dooooog",
          "senses": {
            "un": {
              "definitions": [
                "a dog",
              ],
              "pos": "un",
            },
          },
        },
      ],
      "term": "dog",
    },
  },
]
`;

exports[`Dictionary > lookup > looks up terms properly 1`] = `
[
  {
    "entry": {
      "etymologies": [
        {
          "description": "Latin root",
          "senses": {
            "n": {
              "definitions": [
                "a cat",
              ],
              "pos": "n",
            },
          },
        },
      ],
      "term": "cat",
    },
  },
]
`;

exports[`Dictionary > should tokenize text and find entries 1`] = `
[
  {
    "entries": [
      {
        "entry": {
          "etymologies": [
            {
              "description": "Latin root",
              "senses": {
                "v": {
                  "definitions": [
                    "Lorem ipsum",
                  ],
                  "pos": "v",
                },
              },
            },
          ],
          "term": "你",
        },
      },
      {
        "entry": {
          "etymologies": [
            {
              "description": "Latin root",
              "senses": {
                "v": {
                  "definitions": [
                    "Lorem ipsum",
                  ],
                  "pos": "v",
                },
              },
            },
          ],
          "term": "好",
        },
      },
    ],
    "language": "cmn",
    "lemma": "你好",
  },
  {
    "entries": [],
    "lemma": "！",
  },
  {
    "entries": [
      {
        "entry": {
          "etymologies": [
            {
              "description": "Latin root",
              "senses": {
                "v": {
                  "definitions": [
                    "Lorem ipsum",
                  ],
                  "pos": "v",
                },
              },
            },
          ],
          "term": "你",
        },
      },
    ],
    "language": "cmn",
    "lemma": "你",
  },
  {
    "entries": [],
    "language": "cmn",
    "lemma": "是",
  },
  {
    "entries": [],
    "language": "cmn",
    "lemma": "谁",
  },
  {
    "entries": [],
    "lemma": "？",
  },
]
`;
